force-app/main/default/objects/ucinn_ascendv2__Work_Plan_Unit_Officer_Assignment__c/ucinn_ascendv2__Work_Plan_Unit_Officer_Assignment__c.object-meta.xml
<CustomObject>
    <description>Developer officers who are assigned to the unit/division/school that is tied to a work plan.</description>
    <label>Work Plan Unit Officer Assignment</label>
    <nameField>
        <label>Work Plan Unit Officer Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Plan Unit Officer Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>