force-app/main/default/objects/ucinn_ascendv2__Work_Plan_Unit_Officer_Assignment__c/fields/ucinn_ascendv2__Assignment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Assignment_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Assignment Start Date</label>
    <type>Date</type>
</CustomField>