force-app/main/default/objects/ucinn_ascendv2__Work_Plan_Unit_Officer_Assignment__c/fields/ucinn_ascendv2__Is_Primary_Assignment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Primary_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Assignment</label>
    <type>Checkbox</type>
</CustomField>