force-app/main/default/objects/ucinn_ascendv2__Work_Plan_Unit_Officer_Assignment__c/fields/ucinn_ascendv2__Primary_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Primary_Number_Formula__c</fullName>
    <formula>IF(ucinn_ascendv2__Is_Primary_Assignment__c=TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>