force-app/main/default/objects/ucinn_ascendv2__Work_Plan_Unit_Officer_Assignment__c/fields/ucinn_ascendv2__Work_Plan_Unit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Work_Plan_Unit__c</fullName>
    <label>Work Plan Unit</label>
    <referenceTo>ucinn_ascendv2__Work_Plan_Unit__c</referenceTo>
    <relationshipLabel>Work Plan Unit Officer Assignments</relationshipLabel>
    <relationshipName>Work_Plan_Unit_Offr_Asgmt_Work_Plan_Unit</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>