force-app/main/default/objects/ucinn_ascendv2__Work_Plan_Unit_Officer_Assignment__c/fields/ucinn_ascendv2__Work_Pln_Unt_Off_Assig_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Work_Pln_Unt_Off_Assig_Name_Auto_Number__c</fullName>
    <displayFormat>WPUO-{0000000}</displayFormat>
    <label>Work Pln Unt Off Assig Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>