force-app/main/default/objects/ucinn_ascendv2__Work_Plan_Unit_Officer_Assignment__c/recordTypes/ucinn_ascendv2__Physician.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Physician</fullName>
    <active>false</active>
    <description>Used to link development officers and physicians</description>
    <label>Physician</label>
</RecordType>