force-app/main/default/objects/ucinn_ascendv2__Work_Plan_Unit_Officer_Assignment__c/recordTypes/ucinn_ascendv2__Work_Plan_Unit.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Work_Plan_Unit</fullName>
    <active>true</active>
    <description>Used to link development officers and work plan unit</description>
    <label>Work Plan Unit</label>
</RecordType>