force-app/main/default/objects/ucinn_ascendv2__Work_Plan_Unit_Officer_Assignment__c/validationRules/ucinn_ascendv2__Assignment_End_Date_and_Primary_Flag.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Assignment_End_Date_and_Primary_Flag</fullName>
    <active>false</active>
    <description>Work Plan Unit Assignment cannot be saved with Primary flag set</description>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp;
!ISBLANK(ucinn_ascendv2__Assignment_End_Date__c) &amp;&amp; ucinn_ascendv2__Is_Primary_Assignment__c = TRUE &amp;&amp; RecordType.DeveloperName = &quot;Work_Plan_Unit&quot; &amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Is_Primary_Assignment__c</errorDisplayField>
    <errorMessage>Please uncheck the primary assignment field to save the record with an assignment end date.</errorMessage>
</ValidationRule>