force-app/main/default/objects/ucinn_ascendv2__Work_Plan_Unit_Officer_Assignment__c/validationRules/ucinn_ascendv2__Primary_Assignment.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Primary_Assignment</fullName>
    <active>false</active>
    <description>Only one primary assignment per work plan unit.</description>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp; ucinn_ascendv2__Work_Plan_Unit__r.ucinn_ascendv2__Primary_Assignment_Roll_Up__c &gt; 0 &amp;&amp; ucinn_ascendv2__Is_Primary_Assignment__c=TRUE &amp;&amp; RecordType.DeveloperName = &quot;Work_Plan_Unit&quot; &amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Is_Primary_Assignment__c</errorDisplayField>
    <errorMessage>There is already an active primary assignment for this work plan unit. Please uncheck the primary assignment flag and resolve this issue.</errorMessage>
</ValidationRule>